--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -4,13 +4,21 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-gray-900);
+  background-color: var(--color-gray-50);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --color-gray-50: #f7faff;
+  --color-gray-200: #e5e5e5;
+  --color-gray-700: #5f5f5f;
+  --color-gray-900: #363636;
+}
+#root {
+  display: flex;
+  align-items: center;
 }
 
 a {
@@ -23,9 +31,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: auto;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -42,27 +51,15 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-gray-200);
   cursor: pointer;
   transition: border-color 0.25s;
+  color: var(--color-gray-700);
+}
+input {
+  background-color: var(--color-gray-200);
+  color: var(--color-gray-700);
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  border-color: #141414;
 }
