--- a/cv-app/src/App.css
+++ b/cv-app/src/App.css
@@ -1,9 +1,50 @@
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0px;
   padding: 0px;
 }
+:root {
+  --whiteBackground: #fff;
+}
 .CV {
   display: flex;
-  max-width: 1800px;
+  gap: 20px;
+
+  /* max-width: 1800px; */
+}
+.CV > * {
+  margin: 30px 0px;
+}
+.CVPreview {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  height: 29.7cm;
+  width: 21cm;
+}
+.formContainer,
+.settings,
+.CVPreview {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: var(--whiteBackground);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 12px;
+}
+.settings {
+  max-width: 80px;
+  height: min-content;
+}
+.formContainer,
+.input {
+  display: flex;
+  gap: 20px;
+}
+.input {
+  height: fit-content;
+  max-width: 550px;
+  flex-grow: 1;
+  flex-wrap: wrap;
 }
