--- a/cv-app/src/App.css
+++ b/cv-app/src/App.css
@@ -1,29 +1,20 @@
 * {
   /* border: 1px solid red; */
   margin: 0px;
-  padding: 0px;
 }
 :root {
   --whiteBackground: #fff;
 }
 .CV {
   display: flex;
+  justify-content: center;
   gap: 20px;
-
-  /* max-width: 1800px; */
 }
 .CV > * {
   margin: 30px 0px;
 }
-.CVPreview {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
 
-  height: 29.7cm;
-  width: 21cm;
-}
-.formContainer,
+.formContainer > *,
 .settings,
 .CVPreview {
   display: flex;
@@ -31,20 +22,53 @@
   gap: 20px;
   background-color: var(--whiteBackground);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 12px;
+  padding: 15px;
+  border-radius: 10px;
+}
+.CVPreview {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  flex: 0 0 21cm;
+  height: 29.7cm !important;
+  width: 21cm !important;
 }
 .settings {
-  max-width: 80px;
-  height: min-content;
+  max-width: 120px;
+  height: max-content;
+}
+.settings > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3px;
 }
 .formContainer,
 .input {
   display: flex;
   gap: 20px;
 }
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  width: 100%;
+}
 .input {
   height: fit-content;
+  flex: 0 0 550px;
   max-width: 550px;
-  flex-grow: 1;
-  flex-wrap: wrap;
+  width: auto;
+}
+.deleteBtn {
+  color: rgb(209, 23, 23);
+}
+
+.deleteBtn,
+.inputh2 {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
 }
