--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -11,10 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --color-gray-50: #f7faff;
-  --color-gray-200: #e5e5e5;
-  --color-gray-700: #5f5f5f;
-  --color-gray-900: #363636;
+  --color-gray-50: #e9edf1;
+  --color-gray-200: #f0f1f7;
+  --color-gray-700: #000000;
+  --color-gray-900: #000000;
 }
 #root {
   display: flex;
@@ -35,13 +35,18 @@ body {
   display: flex;
   place-items: center;
   justify-content: center;
-  min-width: 320px;
+  /* min-width: 320px; */
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
+}
+h3 {
+  font-size: 1em;
+  line-height: 1.1;
+  margin-bottom: 10px;
 }
 
 button {
@@ -59,7 +64,44 @@ button {
 input {
   background-color: var(--color-gray-200);
   color: var(--color-gray-700);
+  width: 90%;
+  padding: 0.6em 1.2em;
+  border-radius: 5px;
+  border: 2px solid transparent;
+  box-sizing: border-box;
+  width: 100%;
+}
+input:focus {
+  outline: none;
+  box-shadow: 0 0 8px 2px rgba(139, 195, 255, 0.75);
+  border: 2px solid rgba(0, 123, 255, 1);
 }
 button:hover {
   border-color: #141414;
+}
+.inputForms {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.dateInputs {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+.formButtons,
+.formSaveCancel {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.deleteBtn,
+.cancelBtn {
+  background-color: transparent;
+  border: solid 1px var(--color-gray-700);
+  color: var(--color-gray-700);
+}
+.saveBtn {
+  background-color: #007bff;
+  color: #ffffff;
 }
