--- a/cv-app/src/App.css
+++ b/cv-app/src/App.css
@@ -15,8 +15,7 @@
 }
 
 .formContainer > *,
-.settings,
-.CVPreview {
+.settings {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -25,15 +24,7 @@
   padding: 15px;
   border-radius: 10px;
 }
-.CVPreview {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  box-sizing: border-box;
-  flex: 0 0 21cm;
-  height: 29.7cm !important;
-  width: 21cm !important;
-}
+
 .settings {
   max-width: 120px;
   height: max-content;
