--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -13,6 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   --color-gray-50: #e9edf1;
   --color-gray-200: #f0f1f7;
+  --color-gray-400: #adadad;
   --color-gray-700: #000000;
   --color-gray-900: #000000;
 }
@@ -61,7 +62,8 @@ button {
   transition: border-color 0.25s;
   color: var(--color-gray-700);
 }
-input {
+input,
+textarea {
   background-color: var(--color-gray-200);
   color: var(--color-gray-700);
   width: 90%;
@@ -70,6 +72,9 @@ input {
   border: 2px solid transparent;
   box-sizing: border-box;
   width: 100%;
+  resize: vertical;
+  max-height: 200px;
+  min-height: 35px;
 }
 input:focus {
   outline: none;
@@ -94,6 +99,15 @@ button:hover {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+}
+.addBtnDiv {
+  display: flex;
+  justify-content: center;
+}
+.addBtn {
+  border-radius: 20px;
+  box-shadow: 0px 2px 6px 0px var(--color-gray-400);
+  transition: box-shadow 0.25s;
 }
 .deleteBtn,
 .cancelBtn {
