--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -105,6 +105,7 @@ button:hover {
   justify-content: center;
 }
 .addBtn {
+  margin-top: 20px;
   border-radius: 20px;
   box-shadow: 0px 2px 6px 0px var(--color-gray-400);
   transition: box-shadow 0.25s;
