--- a/cv-app/src/App.css
+++ b/cv-app/src/App.css
@@ -29,12 +29,16 @@
   max-width: 120px;
   height: max-content;
   padding: 15px 5px;
+  gap: 0px;
 }
 .settings > * {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 3px;
+}
+.settings > button {
+  box-shadow: none;
 }
 .formContainer,
 .input {
@@ -63,5 +67,89 @@
   gap: 8px;
   align-items: center;
   justify-content: center;
+}
+.notChossenMenu {
+  background-color: transparent;
+}
+.layoutButtons {
+  display: flex;
+  gap: 10px;
+}
+.topLayoutBtn,
+.leftLayoutBtn,
+.rightLayoutBtn {
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(to bottom, var(--CVColor) 50%, transparent 50%);
+  border-radius: 5px;
+  border: 1px solid var(--CVColor);
+  margin-bottom: 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.349);
+}
+.leftLayoutBtn {
+  background: linear-gradient(to right, var(--CVColor) 50%, transparent 50%);
+}
+.rightLayoutBtn {
+  background: linear-gradient(to right, transparent 50%, var(--CVColor) 50%);
+}
+.colorPickerContainer,
+.fonts {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.colorPickerContainer > * {
+  margin: 0px;
+}
+.colorPicker {
+  background-color: var(--CVColor);
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
   cursor: pointer;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.349);
+}
+.customColorPicker {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+.sansFontButton {
+  font-family: "sans-serif";
+}
+.serifFontButton {
+  font-family: "serif";
+}
+.monoFontButton {
+  font-family: "monospace";
+}
+.sansFontButton,
+.serifFontButton,
+.monoFontButton {
+  padding: auto;
+  height: 90px;
+  cursor: pointer;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.349);
+}
+.fontButton {
+  font-size: 30px;
+}
+.pointer {
+  cursor: pointer;
+}
+.formItem {
+  padding-left: 20px;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.formItem::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.1); /* Soft gray line */
 }
