--- a/cv-app/src/CVPreview.css
+++ b/cv-app/src/CVPreview.css
@@ -1,10 +1,13 @@
 :root {
   --CVColor: #2c3e50;
+  --CVTextColor: #e2e2e2;
+  --previewFlexDirection: column;
+  --CVPreviewFont: sans;
 }
 .CVPreview {
   display: flex;
   align-items: stretch;
-  flex-direction: column;
+  flex-direction: var(--previewFlexDirection);
   width: 100%;
   box-sizing: border-box;
   flex: 0 0 21cm;
@@ -14,6 +17,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   /* padding: 15px; */
   border-radius: 5px;
+  font-family: var(--CVPreviewFont);
 }
 .header {
   display: flex;
@@ -24,7 +28,7 @@
   align-items: center;
   gap: 20px;
   background-color: var(--CVColor);
-  color: white;
+  color: var(--CVTextColor);
 }
 .headerLower {
   display: flex;
@@ -35,7 +39,7 @@
 }
 .CVPreview h2 {
   color: var(--CVColor);
-  background-color: var(--color-gray-200);
+  background-color: var(--CVTextColor);
   font-size: 1.25em;
   margin: 15px 0px;
   width: 100%;
@@ -47,8 +51,22 @@
 }
 .educationItem,
 .experienceItem {
+  margin-bottom: 20px;
+  padding-bottom: 5px;
   display: flex;
   gap: 20px;
+  position: relative;
+}
+
+.educationItem::after,
+.experienceItem::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #f1eded; /* Soft gray color */
 }
 .iconeGap {
   display: flex;
@@ -58,4 +76,12 @@
 }
 .experienceItemDate {
   min-width: 180px;
+}
+.DatePreview {
+  font-size: 0.9em;
+  font-weight: 600;
+}
+.activeFontButton {
+  background-color: var(--CVColor);
+  color: var(--CVTextColor);
 }
