--- a/cv-app/src/index.css
+++ b/cv-app/src/index.css
@@ -61,6 +61,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   color: var(--color-gray-700);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.158);
 }
 input,
 textarea {
@@ -80,9 +81,6 @@ input:focus {
   outline: none;
   box-shadow: 0 0 8px 2px rgba(139, 195, 255, 0.75);
   border: 2px solid rgba(0, 123, 255, 1);
-}
-button:hover {
-  border-color: #141414;
 }
 .inputForms {
   display: flex;
@@ -119,4 +117,17 @@ button:hover {
 .saveBtn {
   background-color: #007bff;
   color: #ffffff;
+}
+@media (max-width: 768px) {
+  body {
+    transform: scale(0.5);
+    transform-origin: top right;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    transform: scale(0.4);
+    transform-origin: top right;
+  }
 }
